# library_django_app

./: .gitignore  Makefile  README.md  docker-compose.yaml  example.env  pyproject.toml
backend/apps/: api_v1_urls.py  viewsets.py
backend/apps/contrib/: admin.py  apps.py  models.py  urls.py
backend/apps/contrib/api/v1/: serializers.py  views.py
backend/apps/contrib/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
compose/.envs/.local/: .postgres
